sandbox/output
OneHundredDoors.java:19: error: illegal start of expression
            ));
            ^
1 error
